--- a/css/styles.css
+++ b/css/styles.css
@@ -14,14 +14,15 @@ body {
 }
 
 h1 {
-  font-family: 'Montserrat, sans-serif';
+  font-family: "Montserrat";
   font-size: 3.5rem;
   line-height: 1.5;
   font-weight: 900;
 }
 
 h3 {
-  font-family: "Montserrat-bold"
+  font-family: "Montserrat";
+  font-weight: 900;
 }
 
 p {
