--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ p {
 
 .nav-link {
   font-size: 1.2rem;
-  font-family: "Montserrat-Light"
+  font-family: "Montserrat"
 }
 
 /* Download Buttons */
